--- a/jobcet.html
+++ b/jobcet.html
@@ -19,21 +19,24 @@
 </style>
 
  <style>
-  .carousel-inner > .item > img,
+  .carousel-inner > .item > width: 2000px;  img,
   .carousel-inner > .item > a > img {
-      width: 70%;
+      width: 100%;
       margin: auto;
+      align: left;
   }
 
 #pic 
 {
-  padding: 20px;
+  padding: 5px;
+  height: 0px;
+
 }
 
 #navpic{
-  margin: 50px;
+  margin: 20px;
 }
-
+#
 
   </style>
 
@@ -44,9 +47,9 @@
 <nav class="navbar navbar-inverse" id = "navpic">
   <div class="container-fluid" id= "pic" >
     <div class="navbar-header">
-      <a class="navbar-brand" href="#"><img src="C:\Users\VHINCENT\Desktop\job\12236945_1083861298305798_1967189764_o.jpg"  style="width:200px;height:100px;" >
-</a>
-    </div>
+  
+ 
+  </div>
     <div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
@@ -71,48 +74,45 @@
     </div>
   </div>
 </nav>
-  <div class="container">
-  <br>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
+  
+<div class="container">
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src=".jpg" alt="Chania" width="460" height="345">
-      </div>
-
-      <div class="item">
-        <img src="img_chania2.jpg" alt="Chania" width="460" height="345">
-      </div>
-    
-      <div class="item">
-        <img src="img_flower.jpg" alt="Flower" width="460" height="345">
-      </div>
-
-      <div class="item">
-        <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
-      </div>
+  <p></p>            
+  <div class="row">
+    <div class="col-md-4">
+      <a href="download.jpg" class="thumbnail">
+        <p>Job List</p>    
+        <img src="download.jpg" alt="PJob List" style="width:250px;height:250px">
+      </a>
     </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    <div class="col-md-4">
+      <a href="12235527_1083889914969603_874904072_o.jpg" class="thumbnail">
+        <p>Company of JobCet.</p>
+        <img src="12235527_1083889914969603_874904072_o.jpg" alt="Moustiers Sainte Marie" style="width:250px;height:250px">
+      </a>
+    </div>
+    <div class="col-md-4">
+      <a href="ContactUs_image2.png" class="thumbnail">
+        <p>Contact Us</p>      
+        <img src="ContactUs_image2.png" alt="Cinque Terre" style="width:250px;height:250px">
+      </a>
+    </div>
   </div>
-</div>
 
+
+
+
+
+
+
+
+
+<br>
+<footer class="footer" align="center" style = "color: black;">
+  <div class= "container">
+   <p class="text-muted">Copy right @ Jobcet</p>
+    </div>
+</footer>
 
 </body>
 </html>
