--- a/current/Index.html
+++ b/current/Index.html
@@ -3,45 +3,16 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>CSS Test</title>
-<style>
-aside div, div.main div {
-	margin: 15px 20px 25px;
-	padding: 15px 20px 25px 10px;
-	border-left: 1px solid #000;
-	border-top: 2px dashed red;
-	border-right: 3px dotted #069;
-	border-bottom: 4px thick #990;
-}
 
-aside { width: 25%; float: left; }
+<link rel="stylesheet" type="text/css" href="/assets/font-awesome/awesome.css" />
+<link rel="stylesheet" type="text/css" href="/assets/open-sans/open-sans.css" />
+<link rel="stylesheet" type="text/css" href="/assets/bootstrap/bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="/assets/open-sans/open-sans.css" />
+<link rel="stylesheet" type="text/css" href="/assets/custom.css" />
 
-.main { width: 75%; float: left; }
-
-#page { background-color: teal; padding: 10px; height: 200px; }
-
-.pink div { background-color: salmon; }
-
-.main div { text-align: center; height: 200px; line-height: 200px; }
-
-a { color: red; }
-a:hover { color: green; }
-a:active { color: yellow; }
-a:visited { color: charcoal; }
-</style>
 </head>
 
 <body>
-	<div id="page" class="clear">
-        <aside class="pink">
-            <div>
-                <a href="#">Left Column</a>
-            </div>
-        </aside>
-        <div class="main pink">
-            <div>
-                Right Column
-            </div>
-        </div>
-    </div>
+
 </body>
 </html>
